# dictionarysnek

./: README.md  pyproject.toml  setup.py
dictionarysnek/: dictionarysnek.py
tests/: test_dictionarysnek.py
