[tool.poetry]
name = "dictionarysnek"
version = "0.0.2"
description = "A Dictionary API Wrapper for Python"
authors = ["Nessundorma <vismdbs@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/Gizems-Cult/dictionarysnek"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
